--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-18 -->
+<!-- 2022-10-19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -42,11 +42,43 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ul class="org-ul">
-<li>IEnumerable/foreach 可迭代对象</li>
-<li>请告诉我这两个概念的区别: override/overload, 重写 vs 重载</li>
-<li>泛型</li>
-<li>继续完成周末作业</li>
+<li>总结: 栈 vs 堆</li>
+<li>总结: String vs StringBuilder</li>
 </ul>
+
+<div class="org-src-container">
+<pre class="src src-csharp"><span style="color: #5317ac;">class</span> <span style="color: #005a5f;">Student</span>
+<span style="color: #000000;">{</span>
+    <span style="color: #005a5f;">int</span> <span style="color: #00538b;">age</span>;
+    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">Name</span>;
+    <span style="color: #005a5f;">Room</span> <span style="color: #00538b;">room</span>;
+<span style="color: #000000;">}</span>
+
+<span style="color: #5317ac;">class</span> <span style="color: #005a5f;">Room</span>
+<span style="color: #000000;">{</span>
+    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">Name</span>;
+    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">Location</span>;
+<span style="color: #000000;">}</span>
+
+<span style="color: #505050;">// </span><span style="color: #505050;">1</span>
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">r</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Room</span><span style="color: #000000;">(</span><span style="color: #2544bb;">"126"</span>, <span style="color: #2544bb;">"bxl....."</span><span style="color: #000000;">)</span>;
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">s1</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Student</span><span style="color: #000000;">(</span>22, <span style="color: #2544bb;">"zs"</span>, r<span style="color: #000000;">)</span>;
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">s2</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Student</span><span style="color: #000000;">(</span>22, <span style="color: #2544bb;">"ls"</span>, r<span style="color: #000000;">)</span>;
+s1.Room.Name = <span style="color: #2544bb;">"127"</span>;
+Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>s2.Room.Name<span style="color: #000000;">)</span>;
+
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">s1</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Student</span><span style="color: #000000;">(</span>22, <span style="color: #2544bb;">"zs"</span>, <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Room</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"126"</span>, <span style="color: #2544bb;">"bxl....."</span><span style="color: #a8007f;">)</span><span style="color: #000000;">)</span>;
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">s2</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Student</span><span style="color: #000000;">(</span>22, <span style="color: #2544bb;">"ls"</span>, <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Room</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"126"</span>, <span style="color: #2544bb;">"bxl....."</span><span style="color: #a8007f;">)</span><span style="color: #000000;">)</span>;
+s1.Room.Name = <span style="color: #2544bb;">"127"</span>;
+Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>s2.Room.Name<span style="color: #000000;">)</span>;
+
+<span style="color: #505050;">// </span><span style="color: #505050;">2</span>
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">students</span> = db.Students.<span style="color: #721045;">ToList</span><span style="color: #000000;">()</span>;
+<span style="color: #005a5f;">var</span> <span style="color: #00538b;">ret</span> = students;
+students<span style="color: #000000;">[</span>1<span style="color: #000000;">]</span>.Name = <span style="color: #2544bb;">"xxx"</span>;
+<span style="color: #5317ac;">return</span> ret;
+</pre>
+</div>
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
@@ -152,7 +184,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-18</p>
+<p class="date">Created: 2022-10-19</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
