--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-11 -->
+<!-- 2024-03-12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -20,18 +20,18 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org14957c5">1. 笔记</a>
+<li><a href="#org5fee737">1. 笔记</a>
 <ul>
-<li><a href="#org8cbbc25">1.1. 2024-03-11 14:52:05</a></li>
-<li><a href="#org484b6e1">1.2. 2024-03-11 08:30:00</a></li>
-<li><a href="#org8452469">1.3. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org82189a0">1.4. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org9e9b6ae">1.5. 2023-12-28 (任务)</a></li>
-<li><a href="#org0a2cf87">1.6. 2023-10-30 (任务)</a></li>
-<li><a href="#orgf5f6210">1.7. 2023-09-07 (任务)</a></li>
+<li><a href="#orgac9613f">1.1. 2024-03-11 14:52:05</a></li>
+<li><a href="#org9c3a52d">1.2. 2024-03-11 08:30:00</a></li>
+<li><a href="#org2feee7b">1.3. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org48c3f08">1.4. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org61f8ddf">1.5. 2023-12-28 (任务)</a></li>
+<li><a href="#org3179b2d">1.6. 2023-10-30 (任务)</a></li>
+<li><a href="#org6adfe91">1.7. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#orga1a6079">2. 任务结果</a></li>
+<li><a href="#org132240a">2. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -42,12 +42,12 @@
 
 
 
-<section id="outline-container-org14957c5" class="outline-2">
-<h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org5fee737" class="outline-2">
+<h2 id="org5fee737"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org8cbbc25" class="outline-3">
-<h3 id="org8cbbc25"><span class="section-number-3">1.1.</span> 2024-03-11 14:52:05</h3>
+<div id="outline-container-orgac9613f" class="outline-3">
+<h3 id="orgac9613f"><span class="section-number-3">1.1.</span> 2024-03-11 14:52:05</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 请大家保持安静，谢谢合作。
@@ -90,7 +90,7 @@
 </p>
 
 
-<figure id="orge8c71e1">
+<figure id="orgdbca72f">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -113,8 +113,8 @@
 </div>
 </div>
 
-<div id="outline-container-org484b6e1" class="outline-3">
-<h3 id="org484b6e1"><span class="section-number-3">1.2.</span> 2024-03-11 08:30:00</h3>
+<div id="outline-container-org9c3a52d" class="outline-3">
+<h3 id="org9c3a52d"><span class="section-number-3">1.2.</span> 2024-03-11 08:30:00</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 Winform 项目，VS 界面:
@@ -172,8 +172,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org8452469" class="outline-3">
-<h3 id="org8452469"><span class="section-number-3">1.3.</span> 2024-01-15 (寒假作业)</h3>
+<div id="outline-container-org2feee7b" class="outline-3">
+<h3 id="org2feee7b"><span class="section-number-3">1.3.</span> 2024-01-15 (寒假作业)</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 做一个求取 BMI 的控制台应用:
@@ -200,8 +200,8 @@ Winform 项目，VS 界面:
 
 
 
-<div id="outline-container-org82189a0" class="outline-3">
-<h3 id="org82189a0"><span class="section-number-3">1.4.</span> 2024-01-15 (期末成绩)</h3>
+<div id="outline-container-org48c3f08" class="outline-3">
+<h3 id="org48c3f08"><span class="section-number-3">1.4.</span> 2024-01-15 (期末成绩)</h3>
 <div class="outline-text-3" id="text-1-4">
 <table>
 
@@ -675,8 +675,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org9e9b6ae" class="outline-3">
-<h3 id="org9e9b6ae"><span class="section-number-3">1.5.</span> 2023-12-28 (任务)</h3>
+<div id="outline-container-org61f8ddf" class="outline-3">
+<h3 id="org61f8ddf"><span class="section-number-3">1.5.</span> 2023-12-28 (任务)</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 使用控制台实现点名的功能。
@@ -688,8 +688,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-org0a2cf87" class="outline-3">
-<h3 id="org0a2cf87"><span class="section-number-3">1.6.</span> 2023-10-30 (任务)</h3>
+<div id="outline-container-org3179b2d" class="outline-3">
+<h3 id="org3179b2d"><span class="section-number-3">1.6.</span> 2023-10-30 (任务)</h3>
 <div class="outline-text-3" id="text-1-6">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
@@ -697,8 +697,8 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-orgf5f6210" class="outline-3">
-<h3 id="orgf5f6210"><span class="section-number-3">1.7.</span> 2023-09-07 (任务)</h3>
+<div id="outline-container-org6adfe91" class="outline-3">
+<h3 id="org6adfe91"><span class="section-number-3">1.7.</span> 2023-09-07 (任务)</h3>
 <div class="outline-text-3" id="text-1-7">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
@@ -707,10 +707,10 @@ Winform 项目，VS 界面:
 </div>
 </section>
 
-<section id="outline-container-orga1a6079" class="outline-2">
-<h2 id="orga1a6079"><span class="section-number-2">2.</span> 任务结果</h2>
+<section id="outline-container-org132240a" class="outline-2">
+<h2 id="org132240a"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org2a188e3">
+<table id="org286715e">
 
 
 <colgroup>
@@ -728,9 +728,9 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#orgf5f6210">2023-09-07</a></th>
-<th scope="col" class="org-right"><a href="#org0a2cf87">2023-10-30</a></th>
-<th scope="col" class="org-right"><a href="#org9e9b6ae">2023-12-28</a></th>
+<th scope="col" class="org-right"><a href="#org6adfe91">2023-09-07</a></th>
+<th scope="col" class="org-right"><a href="#org3179b2d">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#org61f8ddf">2023-12-28</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1132,7 +1132,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-11</p>
+<p class="date">Created: 2024-03-12</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
