--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-11 -->
+<!-- 2024-03-12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -20,24 +20,24 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgcecfe29">1. 笔记</a>
+<li><a href="#org4976da7">1. 笔记</a>
 <ul>
-<li><a href="#orgbb73b3f">1.1. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.2. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.3. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.4. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.5. 2023-09-06 (任务)</a></li>
+<li><a href="#org825b874">1.1. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgf9eb8cd">1.2. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#org4d580da">1.3. 2023-12-26 (任务)</a></li>
+<li><a href="#orgeeb6b52">1.4. 2023-10-31 (任务)</a></li>
+<li><a href="#org96c6711">1.5. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org366482f">2. 任务结果</a></li>
-<li><a href="#org47c88af">3. 知识点</a>
+<li><a href="#org835e0ff">2. 任务结果</a></li>
+<li><a href="#orgd2ea087">3. 知识点</a>
 <ul>
-<li><a href="#org2d01e22">3.1. 将 string 转换为 double 有哪些方式?</a></li>
+<li><a href="#orgfcdfd79">3.1. 将 string 转换为 double 有哪些方式?</a></li>
 </ul>
 </li>
-<li><a href="#org7ac10f0">4. 练习题</a>
+<li><a href="#orgccc0350">4. 练习题</a>
 <ul>
-<li><a href="#org4d18255">4.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
+<li><a href="#org9efd179">4.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </ul>
 
 
-<section id="outline-container-orgcecfe29" class="outline-2">
-<h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org4976da7" class="outline-2">
+<h2 id="org4976da7"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.1.</span> 2024-01-16 (寒假作业)</h3>
+<div id="outline-container-org825b874" class="outline-3">
+<h3 id="org825b874"><span class="section-number-3">1.1.</span> 2024-01-16 (寒假作业)</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 C/S架构编程，做完第一章所有的上机题:
@@ -66,8 +66,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.2.</span> 2024-01-16 (期末成绩)</h3>
+<div id="outline-container-orgf9eb8cd" class="outline-3">
+<h3 id="orgf9eb8cd"><span class="section-number-3">1.2.</span> 2024-01-16 (期末成绩)</h3>
 <div class="outline-text-3" id="text-1-2">
 <table>
 
@@ -487,8 +487,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.3.</span> 2023-12-26 (任务)</h3>
+<div id="outline-container-org4d580da" class="outline-3">
+<h3 id="org4d580da"><span class="section-number-3">1.3.</span> 2023-12-26 (任务)</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
@@ -496,8 +496,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.4.</span> 2023-10-31 (任务)</h3>
+<div id="outline-container-orgeeb6b52" class="outline-3">
+<h3 id="orgeeb6b52"><span class="section-number-3">1.4.</span> 2023-10-31 (任务)</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
@@ -505,8 +505,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.5.</span> 2023-09-06 (任务)</h3>
+<div id="outline-container-org96c6711" class="outline-3">
+<h3 id="org96c6711"><span class="section-number-3">1.5.</span> 2023-09-06 (任务)</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
@@ -516,10 +516,10 @@ C/S架构编程，做完第一章所有的上机题:
 </section>
 
 
-<section id="outline-container-org366482f" class="outline-2">
-<h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
+<section id="outline-container-org835e0ff" class="outline-2">
+<h2 id="org835e0ff"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org53e5988">
+<table id="org87961e6">
 
 
 <colgroup>
@@ -537,9 +537,9 @@ C/S架构编程，做完第一章所有的上机题:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-left"><a href="#org16fdc68">2023-09-06</a></th>
-<th scope="col" class="org-right"><a href="#org64a4c8c">2023-10-31</a></th>
-<th scope="col" class="org-right"><a href="#orgad105e2">2023-12-26</a></th>
+<th scope="col" class="org-left"><a href="#org96c6711">2023-09-06</a></th>
+<th scope="col" class="org-right"><a href="#orgeeb6b52">2023-10-31</a></th>
+<th scope="col" class="org-right"><a href="#org4d580da">2023-12-26</a></th>
 </tr>
 </thead>
 <tbody>
@@ -891,12 +891,12 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </section>
 
-<section id="outline-container-org47c88af" class="outline-2">
-<h2 id="org47c88af"><span class="section-number-2">3.</span> 知识点</h2>
+<section id="outline-container-orgd2ea087" class="outline-2">
+<h2 id="orgd2ea087"><span class="section-number-2">3.</span> 知识点</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org2d01e22" class="outline-3">
-<h3 id="org2d01e22"><span class="section-number-3">3.1.</span> 将 string 转换为 double 有哪些方式?</h3>
+<div id="outline-container-orgfcdfd79" class="outline-3">
+<h3 id="orgfcdfd79"><span class="section-number-3">3.1.</span> 将 string 转换为 double 有哪些方式?</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 在 C# 中，转换 string 为 double 的方式主要有三种:
@@ -975,12 +975,12 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </section>
 
-<section id="outline-container-org7ac10f0" class="outline-2">
-<h2 id="org7ac10f0"><span class="section-number-2">4.</span> 练习题</h2>
+<section id="outline-container-orgccc0350" class="outline-2">
+<h2 id="orgccc0350"><span class="section-number-2">4.</span> 练习题</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org4d18255" class="outline-3">
-<h3 id="org4d18255"><span class="section-number-3">4.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
+<div id="outline-container-org9efd179" class="outline-3">
+<h3 id="org9efd179"><span class="section-number-3">4.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
 <div class="outline-text-3" id="text-4-1">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">using</span> <span style="color: #00538b;">System</span>;
@@ -1069,7 +1069,7 @@ TODO
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-11</p>
+<p class="date">Created: 2024-03-12</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
